--- a/p5styles.css
+++ b/p5styles.css
@@ -1,11 +1,11 @@
-body {
+.body1 {
 
-    background-color: #1a1a40;
-    color: white;
+    background-color: white    ;
+    color: black;
     margin-top: 100px;
     margin-left: 200px;
     margin-right: 200px;
-    font-family: Calibri, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif
     font-size: 14px;
     width: 100%;
     height: auto;
@@ -14,10 +14,25 @@ body {
   
 }
 
+body {
 
+    background-color: #1a1a40;
+    color: black;
+    margin-top: 100px;
+    margin-left: 200px;
+    margin-right: 200px;
+    font-family: Calibri, sans-serif;
+    font-size: 20px;
+    width: 100%;
+    height: auto;
+    max-width: 800px; /* Set a max width for the body */
+    margin: 0 auto; /* Center the body horizontally */
+  
+}
 
 button {
     padding: 10px 15px;
+    margin: 20px;
     border: none;
     background-color: #007BFF;
     color: white;
@@ -25,65 +40,52 @@ button {
     cursor: pointer;
     border-radius: 5px;
     margin-top: 10px;
-}
-
-img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-}
-#vaseImage {
-
-   
-    width: 50%;
-    height:auto;
-    max-width: 300px;
-    border-radius: 10%;
-    margin: 0;
-    padding: 0;
-    display: block; /* Ensures it behaves like a block-level element */
 
 }
 
-#turtle-images {
-
-   
-    width: 50%;
-    height:auto;
-    max-width: 300px;
-    border-radius: 10%;
-    margin: 0;
-    padding: 0;
-    display: block; /* Ensures it behaves like a block-level element */
+buttonQuestion {
+    padding: 10px 30px;
+    margin: 20px;
+    border: none;
+    background-color: #9b0f22;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    border-radius: 5px;
 
 }
 
-.turtle-container {
+.nav-buttons {
+    position: relative;
+    padding: 10px 30px;
+    margin: 20px;
     display: flex;
-    align-items: center;
-    flex-wrap: wrap; /* Allows wrapping to the next line if needed */
-    gap: 40px; /* Space between images */
-}   
+    justify-content: space-between;
+    width: 70%;
+  
+ 
+}
 
-.modal {
-    display: none;
-    position: fixed;
-    z-index: 1000;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.8);
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .modal-content {
-    max-width: 90%;
-    max-height: 90%;
-  }
-  
-  .modal.show {
-    display: flex;
-  }
+button:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+}
+
+
+
+
+.container {
+    max-width: 600px;
+    margin: 50px auto;
+    padding: 20px;
+    background: white;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+}
+
+
+
+buttonQuestion:hover {
+    background-color: #e00987;
+}
   
