--- a/p5styles.css
+++ b/p5styles.css
@@ -1,16 +1,15 @@
 .body1 {
 
-    background-color: white    ;
+    background-color: white;
     color: black;
-    margin-top: 100px;
-    margin-left: 200px;
-    margin-right: 200px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif
-    font-size: 14px;
+
+    font-family: Calibri, sans-serif;
+    font-size: 20px;
     width: 100%;
     height: auto;
-    max-width: 800px; /* Set a max width for the body */
-    margin: 0 auto; /* Center the body horizontally */
+    max-width: 800px;
+    margin: auto; /* Set a max width for the body */
+
   
 }
 
@@ -18,15 +17,13 @@ body {
 
     background-color: #1a1a40;
     color: black;
-    margin-top: 100px;
-    margin-left: 200px;
-    margin-right: 200px;
     font-family: Calibri, sans-serif;
     font-size: 20px;
     width: 100%;
     height: auto;
     max-width: 800px; /* Set a max width for the body */
-    margin: 0 auto; /* Center the body horizontally */
+    margin:auto;
+    
   
 }
 
@@ -43,7 +40,7 @@ button {
 
 }
 
-buttonQuestion {
+.buttonQuestion {
     padding: 10px 30px;
     margin: 20px;
     border: none;
@@ -52,6 +49,7 @@ buttonQuestion {
     font-size: 16px;
     cursor: pointer;
     border-radius: 5px;
+    text-align: left;
 
 }
 
@@ -67,6 +65,7 @@ buttonQuestion {
 button:disabled {
     background-color: #ccc;
     cursor: not-allowed;
+    opacity: 0;
 }
 
 
@@ -83,7 +82,7 @@ button:disabled {
 
 
 
-buttonQuestion:hover {
+.buttonQuestion:hover {
     background-color: #e00987;
 }
   
